; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hash_table.c_htbl_del.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hash_table.c_htbl_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @htbl_del(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @htbl_find_or_create(i32* %7, i64 %8)
  %10 = load i32, i32* %6, align 4
  %11 = mul nsw i32 %10, 2
  %12 = add nsw i32 %11, 1
  %13 = call i32 @chg_del(i32 %9, i32 %12)
  ret void
}

declare dso_local i32 @chg_del(i32, i32) #1

declare dso_local i32 @htbl_find_or_create(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
